src/test/ui/impl-trait/feature-gate-explicit_generic_args_with_impl_trait.stderr
error[E0632]: cannot provide explicit generic arguments when `impl Trait` is used in argument position
  --> $DIR/feature-gate-explicit_generic_args_with_impl_trait.rs:4:11
   |
LL |     foo::<str>("".to_string());
   |           ^^^ explicit generic argument not allowed

error: aborting due to previous error

